# CCTelemetry

./: .gitignore  LICENSE  PKGBUILD  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
.github/workflows/: build-app.yml  build-nightly.yml
scripts/: sync-version.js
src/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.route.ts
src/app/components/: analysis-findings.html  analysis-findings.ts  bar-list.component.html  bar-list.component.ts  data-table.component.html  data-table.component.ts  filters.component.html  filters.component.ts  header.html  header.ts  live-strip.component.html  live-strip.component.ts  stat-tiles.component.html  stat-tiles.component.ts  suggestions.component.ts  token-share.component.html  token-share.component.ts  tool-breakdown.component.html  tool-breakdown.component.ts  usage-chart.component.html  usage-chart.component.ts  warn-banner.component.ts
src/app/core/: analysis.selfcheck.ts  analysis.ts  colors.ts  core.selfcheck.ts  core.ts  format.ts
src/app/pages/about/: about.html  about.ts
src/app/pages/analysis/: analysis.html  analysis.ts
src/app/pages/dashboard/: dashboard.html  dashboard.ts
src/app/pages/settings/: settings.html  settings.ts
src/app/services/: filters-store.ts  notify.ts  theme.ts  usage.service.ts
src/app/theme/: preset.ts
